--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="main">
         <header class="theme-nav">
-            <h1 class="title">HTML and CSS projects</h1>
+            <h1 class="title">HTML and CSS Projects</h1>
             <ul class="menu">
                 <li class="list-item item-1">
                     <a class="page-link current-link" href="#">HTML/CSS</a>
