--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monda:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>HTML/CSS</title>
+    <title>HTML and CSS </title>
 </head>
 <body>
 
@@ -31,80 +31,101 @@
         <div class="card-wrapper">
 
             <div id="project-1" class="card">
-                    <img class="demo-img" src="img/my-github.png" alt="">
+                    <img class="demo-img" src="img/project-1.png" alt="">
                
 
                 <div class="card-info">
                     <div class="stack-responsivness">
-                        <h3>HTML CSS</h3>
-                        <div class="responsivness">
+                        <h3>HTML CSS jQuery</h3>
+                        <div class="responsive">
                             <h6>RESPONSIVE</h6>
                         </div>
                     </div>
 
-                    <h2 class="project-title">Simple Landing Page</h2>
+                    <h2 class="project-title">Tutor Profile Page</h2>
 
-                    <a target="_blank" href="#" class="view-link">Preview</a>
-                    <a target="_blank" href="#" class="source-link">Source Code</a>
+                    <a target="_blank" href="https://alans.netlify.app/" class="view-link">Preview</a>
+                    <a target="_blank" href="https://github.com/aliabdulazeez/teaching_portfolio" class="source-link">Source Code</a>
                 </div>
             </div>
             <div id="project-2" class="card">
                 <div class="card-img">
-                    <img class="demo-img" src="img/my-github.png" alt="">
+                    <img class="demo-img" src="img/project-2.png" alt="">
                 </div>
 
                 <div class="card-info">
                     <div class="stack-responsivness">
-                        <h3>HTML CSS</h3>
-                        <div class="responsivness">
+                        <h3>HTML CSS JS</h3>
+                        <div class="responsive">
                             <h6>RESPONSIVE</h6>
                         </div>
                     </div>
 
-                    <h2 class="project-title">Simple Landing Page</h2>
+                    <h2 class="project-title">User Testimonial Page</h2>
 
-                    <a target="_blank" href="#" class="view-link">Preview</a>
-                    <a target="_blank" href="#" class="source-link">Source Code</a>
+                    <a target="_blank" href="https://user-testimony-section.netlify.app/#" class="view-link">Preview</a>
+                    <a target="_blank" href="https://github.com/aliabdulazeez/Challenge-3" class="source-link">Source Code</a>
                 </div>
             </div>
 
 
             <div id="project-3" class="card">
                 <div class="card-img">
-                    <img class="demo-img" src="img/my-github.png" alt="">
+                    <img class="demo-img" src="img/project-3.png" alt="">
                 </div>
 
                 <div class="card-info">
                     <div class="stack-responsivness">
-                        <h3>HTML CSS</h3>
-                        <div class="responsivness">
+                        <h3>HTML CSS JS</h3>
+                        <div class="responsive">
                             <h6>RESPONSIVE</h6>
                         </div>
                     </div>
 
-                    <h2 class="project-title">Simple Landing Page</h2>
+                    <h2 class="project-title">Coming Soon Page</h2>
 
-                    <a target="_blank" href="#" class="view-link">Preview</a>
-                    <a target="_blank" href="#" class="source-link">Source Code</a>
+                    <a target="_blank" href="https://soming-soon-page.netlify.app/" class="view-link">Preview</a>
+                    <a target="_blank" href="https://github.com/aliabdulazeez/Challenge-4" class="source-link">Source Code</a>
                 </div>
             </div>
-            <div id="project-3" class="card">
+            <div id="project-4" class="card">
                 <div class="card-img">
-                    <img class="demo-img" src="img/my-github.png" alt="">
+                    <img class="demo-img" src="img/project-4.png" alt="">
+                </div>
+
+                <div class="card-info">
+                    <div class="stack-responsivness">
+                        <h3>HTML CSS JS</h3>
+                        <div class="responsive">
+                            <h6>RESPONSIVE</h6>
+                        </div>
+                    </div>
+
+                    <h2 class="project-title">Simon Game</h2>
+
+                    <a target="_blank" href="https://simon-landing.netlify.app/" class="view-link">Preview</a>
+                    <a target="_blank" href="https://github.com/aliabdulazeez/simon-game-remake" class="source-link">Source Code</a>
+                </div>
+            </div>
+
+
+            <div id="project-5" class="card">
+                <div class="card-img">
+                    <img class="demo-img" src="img/project-5.png" alt="">
                 </div>
 
                 <div class="card-info">
                     <div class="stack-responsivness">
                         <h3>HTML CSS</h3>
-                        <div class="responsivness">
-                            <h6>RESPONSIVE</h6>
+                        <div class="not-responsive">
+                            <h6>NOT RESPONSIVE</h6>
                         </div>
                     </div>
 
-                    <h2 class="project-title">Simple Landing Page</h2>
+                    <h2 class="project-title">A Blog Website</h2>
 
-                    <a target="_blank" href="#" class="view-link">Preview</a>
-                    <a target="_blank" href="#" class="source-link">Source Code</a>
+                    <a target="_blank" href="https://wblogs.netlify.app/" class="view-link">Preview</a>
+                    <a target="_blank" href="https://github.com/aliabdulazeez/wBlogs" class="source-link">Source Code</a>
                 </div>
             </div>
         </div>
