--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                     <h2 class="project-title">A Blog Website</h2>
 
-                    <a target="_blank" href="https://wblogs.netlify.app/" class="view-link">Preview</a>
+                    <a  href="https://wblogs.netlify.app/" class="view-link">Preview</a>
                     <a target="_blank" href="https://github.com/aliabdulazeez/wBlogs" class="source-link">Source Code</a>
                 </div>
             </div>
