--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <div class="main">
         <header class="theme-nav">
-            <h1 class="title">HTML and CSS Projects</h1>
+            <h1 class="title">Basic Web Projects</h1>
             <ul class="menu">
                 <li class="list-item item-1">
-                    <a class="page-link current-link" href="#">HTML/CSS</a>
+                    <a class="page-link current-link" href="https://aliadam.netlify.app/">HOME</a>
                 </li>
 
                 <li class="list-item item-2">
-                    <a class="page-link" href="#">JAVASCRIPT</a>
+                    <a class="page-link" href="#">ADVANCED</a>
                 </li>
 
                 <li class="list-item item-3">
@@ -44,7 +44,7 @@
 
                     <h2 class="project-title">Tutor Profile Page</h2>
 
-                    <a target="_blank" href="https://alans.netlify.app/" class="view-link">Preview</a>
+                    <a href="https://alans.netlify.app/" class="view-link">Preview</a>
                     <a target="_blank" href="https://github.com/aliabdulazeez/teaching_portfolio" class="source-link">Source Code</a>
                 </div>
             </div>
