--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
             <div id="project-9" class="card">
                 <div class="card-img">
-                    <img class="demo-img" src="img/project-9-gif.gif" alt="">
+                    <img class="demo-img" src="img/project-9.png" alt="">
                 </div>
 
                 <div class="card-info">
