--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </li>
 
                 <li class="list-item item-2">
-                    <a class="page-link" href="#">ADVANCED</a>
+                    <a class="page-link" href="https://advanced-web.netlify.app/">ADVANCED</a>
                 </li>
 
                 <li class="list-item item-3">
