--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </li>
 
                 <li class="list-item item-3">
-                    <a class="page-link" href="#">REACT</a>
+                    <a class="page-link" href="https://i-react.netlify.app/">REACT</a>
                 </li>
             </ul>
         </header>
