--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
             <h1 class="title">Basic Web Projects</h1>
             <ul class="menu">
                 <li class="list-item item-1">
-                    <a class="page-link current-link" href="https://aliadam.netlify.app/">HOME</a>
+                    <a class="page-link current-link" href="https://aliadam.me/">HOME</a>
                 </li>
 
                 <li class="list-item item-2">
-                    <a class="page-link" href="https://advanced-web.netlify.app/">ADVANCED</a>
+                    <a class="page-link" href="https://advanced-web-pro.netlify.app/">ADVANCED</a>
                 </li>
 
                 <li class="list-item item-3">
-                    <a class="page-link" href="https://i-react.netlify.app/">REACT</a>
+                    <a class="page-link" href="https://react-web-pro.netlify.app/">REACT</a>
                 </li>
             </ul>
         </header>
@@ -244,7 +244,7 @@
     </div>
     
     <footer class="copyright">
-        <p>&copy; 2020 Ali Adam </p>
+        <p>&copy; 2021 Ali Adam </p>
     </footer>
 
     <script src="main.js"></script>
