--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <h1 class="title">Basic Web Projects</h1>
         <ul class="menu">
           <li class="list-item item-1">
-            <a class="page-link current-link" href="https://aliadam.me/"
+            <a
+              class="page-link current-link"
+              href="https://aliadam.me/#projects"
               >HOME PAGE</a
             >
           </li>
