updated old links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li class="list-item item-1">
             <a
               class="page-link current-link"
-              href="https://aliadam.me/#projects"
+              href="https://nomanoff.github.io/#projects"
               >HOME PAGE</a
             >
           </li>
@@ -41,7 +41,7 @@
             <h2 class="project-title">Apple Website Clone</h2>
 
             <a
-              href="https://aliadam.me/apple-website-clone/index.html"
+              href="https://nomanoff.github.io/apple-website-clone/index.html"
               class="view-link"
               >Preview</a
             >
@@ -70,7 +70,7 @@
             <h2 class="project-title">A Sign-up Form</h2>
 
             <a
-              href="https://aliadam.me/responsive-sign-up-form/"
+              href="https://nomanoff.github.io/responsive-sign-up-form/"
               class="view-link"
               >Preview</a
             >
@@ -129,7 +129,7 @@
             <h2 class="project-title">News Blog Preview</h2>
 
             <a
-              href="https://aliadam.me/news-blog-preview-shark/"
+              href="https://nomanoff.github.io/news-blog-preview-shark/"
               class="view-link"
               >Preview</a
             >
@@ -185,7 +185,7 @@
             <h2 class="project-title">Scroll Down Indicator</h2>
 
             <a
-              href="https://aliadam.me/scroll-down-indicator/"
+              href="https://nomanoff.github.io/scroll-down-indicator/"
               class="view-link"
               >Preview</a
             >
@@ -214,7 +214,7 @@
             <h2 class="project-title">CSS Image Animation</h2>
 
             <a
-              href="https://aliadam.me/background-img-animation/"
+              href="https://nomanoff.github.io/background-img-animation/"
               class="view-link"
               >Preview</a
             >
@@ -243,7 +243,7 @@
             <h2 class="project-title">Animate On Scroll</h2>
 
             <a
-              href="https://aliadam.me/change-style-on-scroll-js/"
+              href="https://nomanoff.github.io/change-style-on-scroll-js/"
               class="view-link"
               >Preview</a
             >
@@ -272,7 +272,7 @@
             <h2 class="project-title">Background Video</h2>
 
             <a
-              href="https://aliadam.me/background-video-play/"
+              href="https://nomanoff.github.io/background-video-play/"
               class="view-link"
               >Preview</a
             >
@@ -300,7 +300,7 @@
 
             <h2 class="project-title">Modal Effect With Js</h2>
 
-            <a href="https://aliadam.me/js-modal-effect/" class="view-link"
+            <a href="https://nomanoff.github.io/js-modal-effect/" class="view-link"
               >Preview</a
             >
             <a
